Sources/sdk/sccda.h

#define SCC_PACK_SET 1
#define SCC_PACKED_BY_SCCDA_H 1
typedef VTSYSPARAM VTHDOC, * VTLPHDOC;
#define VTHDOC_INVALID     0
   /*
   | SCCDAPOS  structure
   */

typedef SCCPOS SCCDAPOS;
typedef SCCPOS * PSCCDAPOS;
typedef struct VTSELECTIONtag
{
    VTDWORD       dwStructSize;           /* Initialize to sizeof(VTSELECTION)  */
    VTDWORD       dwType;                 /* Selection type (see below)         */
    union
    {
        VTWORD  wSection;
    } uSelection;
} VTSELECTION, * PVTSELECTION;
/* Values for VTSELECTION.dwType */
#define VTSEL_SECTIONNUMBER      1
typedef SCCERR  DAERR;
#define DAERR_OK                      SCCERR_OK
#define DAERR_BADFILE                 SCCERR_BADFILE
#define DAERR_EMPTYFILE               SCCERR_EMPTYFILE
#define DAERR_PROTECTEDFILE           SCCERR_PROTECTEDFILE
#define DAERR_DRMFILE                 SCCERR_DRMFILE
#define DAERR_SUPFILEOPENFAILS        SCCERR_SUPFILEOPENFAILED
#define DAERR_MEMORY                  SCCERR_OUTOFMEMORY
#define DAERR_EOF                     SCCERR_EOF
#define DAERR_ABORT                   SCCERR_ABORT
#define DAERR_FILTERNOTAVAIL          SCCERR_NOFILTER
#define DAERR_FILTERLOADFAILED        SCCERR_FILTERLOADFAILED
#define DAERR_FILEOPENFAILED          SCCERR_FILEOPENFAILED
#define DAERR_CHARMAPFAILED           SCCERR_CHARMAPFAILED
#define DAERR_UNKNOWN                 SCCERR_UNKNOWN
#define DAERR_FILECREATE              SCCERR_FILECREATE
#define DAERR_FILEWRITEFAILED         SCCERR_FILEWRITEFAILED
#define DAERR_MORE                    SCCERR_MORE
#define DAERR_BADPARAM                SCCERR_BADPARAM
#define DAERR_NOFILE                  SCCERR_NOFILE
#define DAERR_UNSUPPORTEDCOMPRESSION  SCCERR_UNSUPPORTEDCOMPRESSION
#define DAERR_MISALIGNMENT            SCCERR_EXCEPT_DATATYPE_MISALIGNMENT
#define DAERR_NODATATORENDER          SCCERR_NODATATORENDER
#define DAERR_EXTERNALURLREFERENCE    SCCERR_EXTERNALURLREFERENCE
#define DAERR_LINKTOFILE              SCCERR_LINKTOFILE
#define DAERR_NOTARCHIVEFILE          SCCERR_NOTARCHIVEFILE
#define DAERR_NOTSUPPORTEDARCHIVEFILE SCCERR_NOTSUPPORTEDARCHIVEFILE
#define DAERR_BADCREDENTIALS          SCCERR_BADCREDENTIALS
#define DA_PATHSIZE 1024
#define DA_EXTENSIONSIZE 8
/* For tree file access, 8-9-99 */
typedef struct DATREENODEtag
{
    VTDWORD dwSize;
    VTDWORD dwNode;
    VTBYTE  szName[DA_PATHSIZE];
    VTDWORD dwFileSize;
    VTDWORD dwTime;
    VTDWORD dwFlags;
    VTDWORD dwCharSet;
} SCCDATREENODE, *PSCCDATREENODE;
#define SCCDA_TREENODEFLAG_FOLDER   (0x00000001)
#define SCCDA_TREENODEFLAG_SELECTED (0x00000002)
#define SCCDA_TREENODEFLAG_FOCUS    (0x00000004)
#define SCCDA_TREENODEFLAG_ENCRYPT  (0x00000010)
#define SCCDA_TREENODEFLAG_ARCKNOWNENCRYPT (0x00000020)
#define SCCDA_TREENODEFLAG_BUFFEROVERFLOW	(0x00000100)
typedef struct DATREENODELOCATORtag
{
    VTDWORD dwSize;           /* the size of the DATREENODELOCATOR structure */
    VTDWORD dwSpecialFlags;   /* the archive tree node special flag */
    VTDWORD dwData1;
    VTDWORD dwData2;
}SCCDATREENODELOCATOR, *PSCCDATREENODELOCATOR;
/* For Dramamine support */
typedef struct DADRAMAMINEINFO1tag
{
  VTWORD  word1;
  VTBYTE  szByte1[64];
  VTBYTE  szByte2[64];
} DADRAMAMINEINFO1, * PDADRAMAMINEINFO1;
/* maximum size of a subdocument specification */
#define DA_MAXSUBDOCSPEC    256
typedef struct DAFILESPECtag
{
    VTDWORD   dwSpecType;
    VTLPVOID  pSpec;
    VTHANDLE  hThis;
} DAFILESPEC, * PDAFILESPEC;
/*
|  DAFILEFORMATTYPE enumeration
*/
typedef enum DAFILEFORMATTYPEtag
	{
	DAFORMAT_UNKNOWN = 0,  /* Unknown format */
	DAFORMAT_WP = 1,       /* Word processor */
	DAFORMAT_SS = 2,       /* Spreadsheet */
	DAFORMAT_DB = 3,       /* Database */
	DAFORMAT_IM = 5,       /* Bitmap image */
	DAFORMAT_AR = 6,       /* Archive */
	DAFORMAT_DR = 7,       /* Vector Drawing */
	DAFORMAT_PR = 8,       /* Presentation */
	DAFORMAT_CH = 9,       /* Chart */
	DAFORMAT_MM = 10,      /* Multimedia */

	DAFORMAT_MULTIPLE = 98,    /* File supports multiple file types */
	DAFORMAT_OTHER    = 99     /* A format not otherwise listed */
	} DAFILEFORMATTYPE;
/* 
|  SCCDAOBJECT structure
| 
|  Object identifier. Used in calls to DASaveObject and DAGetInputObjectInfoX 
*/
typedef struct SCCDAOBJECTtag
	{
	VTDWORD    dwSize;       /* Filled in by caller with sizeof(SCCDAOBJECT) */
	VTHDOC     hDoc;         /* Filled in by caller with the DA handle for the document containing the object */
	VTDWORD    dwObjectType; /* SCCCA_EMBEDDEDOBJECT, SCCCA_LINKEDOBJECT, SCCCA_COMPRESSEDFILE, or SCCCA_ATTACHMENT */
	VTDWORD    dwData1;      /* Additional data identifying the object */
	VTDWORD    dwData2;      /* Additional data identifying the object */
	VTDWORD    dwData3;      /* Additional data identifying the object */
	VTDWORD    dwData4;      /* Additional data identifying the object */
    } SCCDAOBJECT, * PSCCDAOBJECT;
/* 
|  SCCDAOBJECTINFOW structure
|
|  Object information
*/

typedef struct SCCDAOBJECTINFOWtag
    {
    VTDWORD    dwSize;                 /* Filled in by caller with sizeof(SCCDAOBJECTINFO) */
    VTWORD     name[DA_PATHSIZE];      /* Object name (2 byte characters) */
    VTDWORD    dwObjectType;           /* Type of object: SCCCA_EMBEDDEDOBJECT, SCCCA_LINKEDOBJECT, SCCCA_COMPRESSEDFILE, or SCCCA_ATTACHMENT */
    VTDWORD    dwFormatId;             /* File format identifier          */
    VTDWORD    dwCompression;          /* Compression type (if known)     */
    VTDWORD    dwFlags;                /* Additional flags (See below)    */
    DAFILEFORMATTYPE formatType;       /* File format type (see DAFILEFORMATTYPE enum) */
    VTWORD     commonExtension[DA_EXTENSIONSIZE]; /* Commonly used filename extension for this file format */
    VTBOOL     bGetObjectFromOLELocator;
    VTBOOL     bGetObjectFromOLEPackage;
    VTBOOL     bGetObjectInfo;
    } SCCDAOBJECTINFOW, * PSCCDAOBJECTINFOW;
                                                        /* All other file formats will return an error                  */

/* File Access callback function signature */
typedef VTDWORD (DA_ENTRYMODPTR DAFILEACCESSCALLBACKFN)(VTDWORD dwID, VTSYSVAL pRequestData, VTSYSVAL pReturnData, VTDWORD dwReturnDataSize);
/* The sig of the UT status callback function */
typedef VTDWORD (DA_ENTRYMODPTR DASTATCALLBACKFN)(VTHANDLE hUnique, VTDWORD dwID, VTSYSVAL pCallbackData, VTSYSVAL pAppData);
DA_ENTRYSC DAERR DA_ENTRYMOD DAGetObjectInfo( 
            VTHDOC hDoc, VTDWORD dwInfoId, VTLPVOID pInfo );
DA_ENTRYSC DAERR DA_ENTRYMOD DAGetOutputObjectInfo( 
            VTHDOC hDoc, VTDWORD dwOutputFileId, VTDWORD dwInfoId, VTLPVOID pInfo );