Sources/sccda.pas

unit sccda;
interface
uses scctype, sccop, sccfi, sccanno, sccerrUnit;

{
  Automatically converted by H2Pas 1.0.0 from D:\work\FPC\ooi\sccda.tmp.h
  The following command line parameters were used:
    -e
    -p
    -D
    -v
    -w
    -o
  And handmade update after it.
}

  const
    External_library='kernel32'; {Setup as you need}

//  { Pointers to basic pascal types, inserted by h2pas conversion program.}
//  Type
//    PLongint  = ^Longint;
//    PSmallInt = ^SmallInt;
//    PByte     = ^Byte;
//    PWord     = ^Word;
//    PDWord    = ^DWord;
//    PDouble   = ^Double;

//  Type
//  PDADRAMAMINEINFO1  = ^DADRAMAMINEINFO1;
//  PDADRAMAMINEINFO1tag  = ^DADRAMAMINEINFO1tag;
//  PDAERR  = ^DAERR;
//  PDAFILEFORMATTYPE  = ^DAFILEFORMATTYPE;
//  PDAFILEFORMATTYPEtag  = ^DAFILEFORMATTYPEtag;
//  PDAFILESPEC  = ^DAFILESPEC;
//  PDAFILESPECtag  = ^DAFILESPECtag;
//  PDATREENODELOCATORtag  = ^DATREENODELOCATORtag;
//  PDATREENODEtag  = ^DATREENODEtag;
//  PPDADRAMAMINEINFO1  = ^PDADRAMAMINEINFO1;
//  PPDAFILESPEC  = ^PDAFILESPEC;
//  PPSCCDAOBJECT  = ^PSCCDAOBJECT;
//  PPSCCDAOBJECTINFOW  = ^PSCCDAOBJECTINFOW;
//  PPSCCDAPOS  = ^PSCCDAPOS;
//  PPSCCDATREENODE  = ^PSCCDATREENODE;
//  PPSCCDATREENODELOCATOR  = ^PSCCDATREENODELOCATOR;
//  PPVTSELECTION  = ^PVTSELECTION;
//  PSCCDAOBJECT  = ^SCCDAOBJECT;
//  PSCCDAOBJECTINFOW  = ^SCCDAOBJECTINFOW;
//  PSCCDAOBJECTINFOWtag  = ^SCCDAOBJECTINFOWtag;
//  PSCCDAOBJECTtag  = ^SCCDAOBJECTtag;
//  PSCCDAPOS  = ^SCCDAPOS;
//  PSCCDATREENODE  = ^SCCDATREENODE;
//  PSCCDATREENODELOCATOR  = ^SCCDATREENODELOCATOR;
//  PVTHDOC  = ^VTHDOC;
//  PVTLPHDOC  = ^VTLPHDOC;
//  PVTSELECTION  = ^VTSELECTION;
//  PVTSELECTIONtag  = ^VTSELECTIONtag;
//  PVTVOID  = ^VTVOID;


  { Copyright (c) 2001, 2010, Oracle and/or its affiliates. All rights reserved.  }
  {
      |   Data Access
      |   Include File sccda.h
      |
      |   DDDD     A
      |   D   D   A A
      |   D   D  A   A
      |   D   D  AAAAA
      |   D   D  A   A
      |   DDDD   A   A
      |
      |   Data Access
      |
       }

  const
     SCC_PACK_SET = 1;
     SCC_PACKED_BY_SCCDA_H = 1;

  type
     PVTHDOC = ^VTHDOC;
     VTHDOC = VTSYSPARAM;
     VTLPHDOC = PVTHDOC;
     PVTLPHDOC = ^VTLPHDOC;

  const
     VTHDOC_INVALID = 0;
  {
  | SCCDAPOS  structure
  }

  type

     SCCDAPOS = SCCPOS;
     PSCCDAPOS = ^SCCDAPOS;
     PPSCCDAPOS = ^PSCCDAPOS;

  { Initialize to sizeof(VTSELECTION)   }
  { Selection type (see below)          }

     PVTSELECTION = ^VTSELECTION;
     VTSELECTION = record
          dwStructSize : VTDWORD;
          dwType : VTDWORD;
          uSelection : record
              case longint of
                 0 : ( wSection : VTWORD );
              end;
       end;
     PPVTSELECTION = ^PVTSELECTION;
  { Values for VTSELECTION.dwType  }

  const
     VTSEL_SECTIONNUMBER = 1;     

  type

     PDAERR = ^DAERR;
     DAERR = SCCERR;

  const
     DAERR_OK = SCCERR_OK;     
     DAERR_BADFILE = SCCERR_BADFILE;     
     DAERR_EMPTYFILE = SCCERR_EMPTYFILE;     
     DAERR_PROTECTEDFILE = SCCERR_PROTECTEDFILE;     
     DAERR_DRMFILE = SCCERR_DRMFILE;     
     DAERR_SUPFILEOPENFAILS = SCCERR_SUPFILEOPENFAILED;     
     DAERR_MEMORY = SCCERR_OUTOFMEMORY;     
     DAERR_EOF = SCCERR_EOF;     
     DAERR_ABORT = SCCERR_ABORT;     
     DAERR_FILTERNOTAVAIL = SCCERR_NOFILTER;     
     DAERR_FILTERLOADFAILED = SCCERR_FILTERLOADFAILED;     
     DAERR_FILEOPENFAILED = SCCERR_FILEOPENFAILED;     
     DAERR_CHARMAPFAILED = SCCERR_CHARMAPFAILED;     
     DAERR_UNKNOWN = SCCERR_UNKNOWN;     
     DAERR_FILECREATE = SCCERR_FILECREATE;     
     DAERR_FILEWRITEFAILED = SCCERR_FILEWRITEFAILED;     
     DAERR_MORE = SCCERR_MORE;     
     DAERR_BADPARAM = SCCERR_BADPARAM;     
     DAERR_NOFILE = SCCERR_NOFILE;     
     DAERR_UNSUPPORTEDCOMPRESSION = SCCERR_UNSUPPORTEDCOMPRESSION;     
     DAERR_MISALIGNMENT = SCCERR_EXCEPT_DATATYPE_MISALIGNMENT;     
     DAERR_NODATATORENDER = SCCERR_NODATATORENDER;     
     DAERR_EXTERNALURLREFERENCE = SCCERR_EXTERNALURLREFERENCE;     
     DAERR_LINKTOFILE = SCCERR_LINKTOFILE;     
     DAERR_NOTARCHIVEFILE = SCCERR_NOTARCHIVEFILE;     
     DAERR_NOTSUPPORTEDARCHIVEFILE = SCCERR_NOTSUPPORTEDARCHIVEFILE;     
     DAERR_BADCREDENTIALS = SCCERR_BADCREDENTIALS;     
     DA_PATHSIZE = 1024;     
     DA_EXTENSIONSIZE = 8;     
  { For tree file access, 8-9-99  }

  type

     PDATREENODE = ^DATREENODE;
     DATREENODE = record
          dwSize : VTDWORD;
          dwNode : VTDWORD;
          szName : array[0..(DA_PATHSIZE)-1] of VTBYTE;
          dwFileSize : VTDWORD;
          dwTime : VTDWORD;
          dwFlags : VTDWORD;
          dwCharSet : VTDWORD;
       end;
     SCCDATREENODE = DATREENODE;
     PSCCDATREENODE = ^SCCDATREENODE;
     PPSCCDATREENODE = ^PSCCDATREENODE;

  const
     SCCDA_TREENODEFLAG_FOLDER = $00000001;     
     SCCDA_TREENODEFLAG_SELECTED = $00000002;     
     SCCDA_TREENODEFLAG_FOCUS = $00000004;     
     SCCDA_TREENODEFLAG_ENCRYPT = $00000010;     
     SCCDA_TREENODEFLAG_ARCKNOWNENCRYPT = $00000020;     
     SCCDA_TREENODEFLAG_BUFFEROVERFLOW = $00000100;     
  { the size of the DATREENODELOCATOR structure  }
  { the archive tree node special flag  }

  type

     PDATREENODELOCATOR = ^DATREENODELOCATOR;
     DATREENODELOCATOR = record
          dwSize : VTDWORD;
          dwSpecialFlags : VTDWORD;
          dwData1 : VTDWORD;
          dwData2 : VTDWORD;
       end;
     SCCDATREENODELOCATOR = DATREENODELOCATOR;
     PSCCDATREENODELOCATOR = ^SCCDATREENODELOCATOR;
     PPSCCDATREENODELOCATOR = ^PSCCDATREENODELOCATOR;
  { For Dramamine support  }

     PDADRAMAMINEINFO1 = ^DADRAMAMINEINFO1;
     DADRAMAMINEINFO1 = record
          word1 : VTWORD;
          szByte1 : array[0..63] of VTBYTE;
          szByte2 : array[0..63] of VTBYTE;
       end;
     PPDADRAMAMINEINFO1 = ^PDADRAMAMINEINFO1;
  { maximum size of a subdocument specification  }

  const
     DA_MAXSUBDOCSPEC = 256;

  type

     PDAFILESPEC = ^DAFILESPEC;
     DAFILESPEC = record
          dwSpecType : VTDWORD;
          pSpec : VTLPVOID;
          hThis : VTHANDLE;
       end;
     PPDAFILESPEC = ^PDAFILESPEC;
  {
  |  DAFILEFORMATTYPE enumeration
   }
  { Unknown format  }
  { Word processor  }
  { Spreadsheet  }
  { Database  }
  { Bitmap image  }
  { Archive  }
  { Vector Drawing  }
  { Presentation  }
  { Chart  }
  { Multimedia  }
  { File supports multiple file types  }
  { A format not otherwise listed  }

     DAFILEFORMATTYPE =  Longint;
     PDAFILEFORMATTYPE = ^DAFILEFORMATTYPE;
     Const
       DAFORMAT_UNKNOWN = 0;
       DAFORMAT_WP = 1;
       DAFORMAT_SS = 2;
       DAFORMAT_DB = 3;
       DAFORMAT_IM = 5;
       DAFORMAT_AR = 6;
       DAFORMAT_DR = 7;
       DAFORMAT_PR = 8;
       DAFORMAT_CH = 9;
       DAFORMAT_MM = 10;
       DAFORMAT_MULTIPLE = 98;
       DAFORMAT_OTHER = 99;
  {
  |  SCCDAOBJECT structure
  |
  |  Object identifier. Used in calls to DASaveObject and DAGetInputObjectInfoX
   }
  { Filled in by caller with sizeof(SCCDAOBJECT)  }
  { Filled in by caller with the DA handle for the document containing the object  }
  { SCCCA_EMBEDDEDOBJECT, SCCCA_LINKEDOBJECT, SCCCA_COMPRESSEDFILE, or SCCCA_ATTACHMENT  }
  { Additional data identifying the object  }
  { Additional data identifying the object  }
  { Additional data identifying the object  }
  { Additional data identifying the object  }

  type

     PSCCDAOBJECT = ^SCCDAOBJECT;
     SCCDAOBJECT = record
          dwSize : VTDWORD;
          hDoc : VTHDOC;
          dwObjectType : VTDWORD;
          dwData1 : VTDWORD;
          dwData2 : VTDWORD;
          dwData3 : VTDWORD;
          dwData4 : VTDWORD;
       end;
     PPSCCDAOBJECT = ^PSCCDAOBJECT;
  {
  |  SCCDAOBJECTINFOW structure
  |
  |  Object information
   }
  { Filled in by caller with sizeof(SCCDAOBJECTINFO)  }
  { Object name (2 byte characters)  }
  { Type of object: SCCCA_EMBEDDEDOBJECT, SCCCA_LINKEDOBJECT, SCCCA_COMPRESSEDFILE, or SCCCA_ATTACHMENT  }
  { File format identifier           }
  { Compression type (if known)      }
  { Additional flags (See below)     }
  { File format type (see DAFILEFORMATTYPE enum)  }
  { Commonly used filename extension for this file format  }

     PSCCDAOBJECTINFOW = ^SCCDAOBJECTINFOW;
     SCCDAOBJECTINFOW = record
          dwSize : VTDWORD;
          name : array[0..(DA_PATHSIZE)-1] of VTWORD;
          dwObjectType : VTDWORD;
          dwFormatId : VTDWORD;
          dwCompression : VTDWORD;
          dwFlags : VTDWORD;
          formatType : DAFILEFORMATTYPE;
          commonExtension : array[0..(DA_EXTENSIONSIZE)-1] of VTWORD;
          bGetObjectFromOLELocator : VTBOOL;
          bGetObjectFromOLEPackage : VTBOOL;
          bGetObjectInfo : VTBOOL;
       end;
     PPSCCDAOBJECTINFOW = ^PSCCDAOBJECTINFOW;
  {
  |  DAGetObjectInfo and DAGetOutputObjectInfo parameters
   }
  { Retrieves the name of the object, in 8-bit characters.  pInfo points to a buffer of size DA_PATHSIZE.                        }
